--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Execute permission
+        run: chmod +x gradlew
+
       - name: Build
         run: ./gradlew build
 
