--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -38,7 +38,5 @@ jobs:
           title: "${{ env.NAME }}"
           automatic_release_tag: "latest"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: |
-            paper/build/libs/*.jar
-            velocity/build/libs/*.jar
+          files: "build/libs/*.jar"
           prerelease: false
