--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -38,5 +38,5 @@ jobs:
           title: "${{ env.NAME }}"
           automatic_release_tag: "latest"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "build/libs/*.jar"
+          files: "target/*.jar"
           prerelease: false
